# Study-Predictor-App

./: README.md  pyproject.toml  render.yaml
app/: __init__.py  wsgi.py
app/model/: gpa_model.pkl  grade_model.pkl  predictor.py
app/route/: routes.py
app/templates/: index.html
