[project]
name = "stats-project-study-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "harrythe6arry",email = "voravit.sri@student.mahidol.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
