[project]
name = "stats-project-study-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "harrythe6arry",email = "voravit.sri@student.mahidol.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
gunicorn = "^21.2.0"  # For production WSGI server
